runtime/pavex_macros/tests/from_request/fail/unexpected_body_format.rs
use pavex_macros::FromRequest;

#[derive(FromRequest)]
pub struct MyStruct {
    #[body(format = "fantasy")]
    b: String,
}

fn main() {}
